--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.DSM_Desafio2"
         tools:targetApi="31">
         <activity
+            android:name=".AddOrderActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OrdersActivity"
+            android:exported="false"/>
+        <activity
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
@@ -26,8 +32,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"/>
-
+            android:exported="true" />
     </application>
 
 </manifest>
